--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "bracketSameLine": true,
   "bracketSpacing": true,
   "embeddedLanguageFormatting": "auto",
-  "htmlWhitespaceSensitivity": "strict",
+  "htmlWhitespaceSensitivity": "ignore",
   "insertPragma": false,
   "jsxSingleQuote": true,
   "printWidth": 180,
